RESOLVED FIXED276853
[Grid] Fix css/css-flexbox/align-items-baseline-column-vert-expected.html
https://bugs.webkit.org/show_bug.cgi?id=276853
Summary [Grid] Fix css/css-flexbox/align-items-baseline-column-vert-expected.html
alan
Reported 2024-07-20 20:54:56 PDT
ssia
Attachments
[fast-cq]Patch (6.41 KB, patch)
2024-07-20 21:01 PDT, alan
no flags
alan
Comment 1 2024-07-20 21:01:29 PDT
Created attachment 471924 [details] [fast-cq]Patch
EWS
Comment 2 2024-07-23 10:07:00 PDT
Committed 281249@main (ffce697c01da): <https://commits.webkit.org/281249@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471924 [details].
Radar WebKit Bug Importer
Comment 3 2024-07-23 10:08:16 PDT
Note You need to log in before you can comment on or make changes to this bug.