[Grid] Fix css/css-flexbox/align-items-baseline-column-vert-expected.html https://bugs.webkit.org/show_bug.cgi?id=276853

Reviewed by Antti Koivisto.

Using synthesizedBaseline helps to compute ideographic baseline when needed.

* LayoutTests/TestExpectations: flex part (.html) has already been addressed.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-justify-baseline-003-expected.txt: (partial) progression.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-justify-baseline-004-expected.txt: (partial) progression.
* Source/WebCore/rendering/GridBaselineAlignment.cpp:
(WebCore::GridBaselineAlignment::ascentForChild const):

Canonical link: https://commits.webkit.org/281249@main